<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Whit"
    android:orientation="vertical" >

    <include
        android:id="@+id/aboutus_header"
        layout="@layout/include_header" />

    <LinearLayout
        android:id="@+id/about_us_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutus_header"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textColor="@color/gray2"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/daughter"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/aboutus_text"
                android:textColor="@color/gray2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/bottom2"
                android:textColor="@color/gray2"
                android:textSize="13sp" />

            <com.bgw.an.app.activity.chat.view.HandyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/bottom3"
                android:textColor="@color/font_value"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>